discussion/kv_engine/188207/188207_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Add support for using castore in test programs

Change-Id: I0378daea2d2e043c22f7e540328e34ab6a37f05d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-03-15 11:41:12.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-15 12:18:52.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43957/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/programs/parse_tls_option.cc:27:14:
error: no member named "cerr" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43957/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22944/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/parse_tls_option.cc:27:14: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
        std::cerr << TerminalColor::Red
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/parse_tls_option.cc:41:18: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
            std::cerr << TerminalColor::Red << descr << " file " << file
                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22944/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/parse_tls_option.cc:27:14:
error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22944/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12676/ : FAILURE

Compile error at [2023-03-15T11:42:17.786Z] ../kv_engine/programs/parse_tls_option.cc:27:14:
error: no member named "cerr" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12676/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26324/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26324/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23213/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52403/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1750/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25008/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25470/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33426/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12757/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24594/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
